docs: #202 make sure mobile menu dialog covers the entire page

--- a/docs/components/header/header.module.css
+++ b/docs/components/header/header.module.css
@@ -61,6 +61,8 @@
 
 .mobileMenuContainer {
   flex: 1;
+  width: 100%;
+  height: 100vh;
 }
 
 .mobileMenuList {
@@ -103,12 +105,11 @@
 }
 
 .mobileMenuBackdrop {
-  height: 99vh;
-  width: 96vw;
   margin: 0;
   background-color: #f5f5f58e;
   padding: var(--size-5) var(--size-6);
   text-align: right;
+  height: 99vh;
 }
 
 .mobileMenuCloseButton {
